--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
 
                 var noteSubmitUrl = "{% url 'notedb' %}"; // Make sure 'notedb' is the name of your URL pattern in urls.py
 
-                <!-- In your map event handler -->
+                <!-- In map event handler -->
                 map.on('click', function(e) {
                   const lat = e.latlng.lat;
                   const lng = e.latlng.lng;
